gajim (0.16.8-0.1) unstable; urgency=low

  * New upstream release.
  * Update Standards-Version to 3.9.8.
  * Merge changes from the mainline debian package:
    * Update debian/watch.
    * Add dh-python as build dependency.
    * pyasn1 is now a dependency.
    * dbus and python-dbus are now recommended and no longer a dependency.
    * Drop farstream from suggestions.

 -- Mathias Ertl <mati@jabber.at>  Fri, 09 Jun 2017 11:52:27 +0200

gajim (0.16.7-0.1) unstable; urgency=low

  * New upstream release.
  * Readme.html is gone from source, use plain text version instead.

 -- Mathias Ertl <mati@jabber.at>  Wed, 15 Feb 2017 22:46:06 +0100

gajim (0.16.6-0.1) unstable; urgency=low

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Thu, 13 Oct 2016 18:49:27 +0200

gajim (0.16.5-0.1) unstable; urgency=low

  * New upstream release.

 -- Mathias Ertl <mati@jabber.at>  Mon, 11 Jan 2016 20:14:09 +0100

gajim (0.16.4-0.2) unstable; urgency=low

  * Increase minimum python-nbxmpp version to 0.5.3,

 -- Mathias Ertl <mati@jabber.at>  Thu, 03 Dec 2015 14:59:35 +0100

gajim (0.16.4-0.1) unstable; urgency=low

  * New upstream release.
  * Remove fix-manpages.patch (applied upstream).

 -- Mathias Ertl <mati@jabber.at>  Thu, 03 Dec 2015 14:59:35 +0100

gajim (0.16-0.1) unstable; urgency=low

  * New upstream release.
  * Merge changes from the package in Debian unstable.
  * Move to a 0.x Debian revision.
  * Use @jabber.at address as maintainer address, so this is a NMU.
  * Remove debian .menu file.

 -- Mathias Ertl <mati@jabber.at>  Thu, 03 Dec 2015 12:48:20 +0100

gajim (0.15.4-1) unstable; urgency=low

  * New upstream release.
  * Build with compat-level 9, depend on debhelper >= 9.
  * Fix the Maintainer field in debian/control.

 -- Mathias Ertl <mati@fsinf.at>  Sat, 21 Sep 2013 15:34:17 +0200

gajim (0.15.2-1) unstable; urgency=low

  * New upstream release.
  * migrate to python-farstream instead of python-farsight